data/all_generated_tests/raw_wast_tests/loop_IncorrectConditionEvaluation_677.wast
;; 8. **Test Description 8**:    - **Test**: Loop using a `br_if` conditional jump based on a floating-point comparison.    - **Constraint**: Ensure the jump occurs correctly following IEEE 754 rules for floating-point comparison.    - **Reason**: Differences in floating-point handling may create inconsistencies.

(assert_invalid
  (module 
    (func $floating-point-conditional-loop
      (loop (result i32)
        (f32.const 1.0)
        (f32.const 0.0)
        (f32.eq)
        (br_if 0)
        (i32.const 42)
      )
    )
  )
  "type mismatch"
)